# delve

./: Cargo.toml  LICENSE  README.md  SPEC.md
.github/workflows/: ci.yml
crates/delve_cli/: Cargo.toml
crates/delve_cli/src/: main.rs
crates/delve_refserver/: Cargo.toml
crates/libdelve/: Cargo.toml  README.md
crates/libdelve/src/: challenge.rs  crypto.rs  delegate_client.rs  discovery.rs  error.rs  lib.rs  types.rs  verifier.rs
crates/reference_delegate/: Cargo.toml  README.md
crates/reference_delegate/src/: handlers.rs  main.rs  storage.rs  template.rs
crates/reference_delegate/templates/: authorization.html
