[package]
name = "delve_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core library
libdelve = { path = "../libdelve", features = ["delegate"] }

# CLI framework
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time handling
chrono = "0.4"

# Error handling
anyhow = "1"

# Terminal UI
colored = "3"

# Random number generation
rand = "0.9.2"

# Base64 encoding
base64 = "0.22"
