[package]
name = "libdelve"
version = "0.1.0"
edition = "2021"

[dependencies]
# Cryptography
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# DNS resolution
trust-dns-resolver = "0.23"

# HTTP client for delegate mode
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio = { version = "1", features = ["time"], optional = true }

# Error handling
thiserror = "2.0.17"

[features]
default = ["delegate"]
delegate = ["reqwest", "tokio"]
