[package]
name = "reference_delegate"
version = "0.1.0"
edition = "2021"

[dependencies]
libdelve = { path = "../libdelve" }

# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Templating
handlebars = "6"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0.17"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
